2020-12-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l: Error on -0xffff_ffff_ffff_ffff.
	* testsuite/poke.libpoke/values.c (testcase_pk_val_equal_p):
	Finalize the pk compiler in case of an error.
	* testsuite/poke.libpoke/pk_equal_uint.test: Update to not use the
	invalid literal.
	* testsuite/poke.libpoke/pk_nequal_uint.test: Likewise.
	* testsuite/poke.pkl/integers-diag-2.pk: New test.
	* testsuite/poke.pkl/integers-7.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-12-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-fold.c (OP_BINARY_III): Fix signedness of
	comparison.
	* testsuite/poke.pkl/lt-integers-4.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-12-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Remove array bounders
	after they are used.
	* libpoke/pkl-gen.c (pkl_gen_pr_func_arg): Likewise.
	(pkl_gen_pr_cast): Likewise.
	* testsuite/poke.pkl/scons-64.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-12-09  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_func_arg): Traverse the argument
	type in normal context.
	(pkl_gen_pr_map): Traverse the map type in normal context.

2020-12-09  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_cast): Make a pre-order handler.
	(pkl_gen_pr_type): Remove handler.
	(pkl_phase_gen): Adjust accordingly.

2020-12-09  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_struct_type_field): Subpass on the
	field type in normal context, avoiding generating a name.
	(pkl_gen_pr_type_array): Likewise.
	(pkl_gen_pr_type_struct): Likewise.
	(pkl_gen_pr_type): Remove hack.

2020-12-09  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_type_offset): Handle in_mapper and
	in_constructor and in_type.
	(pkl_gen_ps_type_offset): Remove.
	(pkl_phase_gen): Deregister pkl_gen_ps_type_offset.

2020-12-09  Jose E. Marchesi  <jemarch@gnu.org>
